--- a/ci-cd/.github/workflows/main.yml
+++ b/ci-cd/.github/workflows/main.yml
@@ -25,6 +25,16 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan
 
+      - name: Terraform Apply
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: terraform apply -auto-approve tfplan
+
+      - name: Deploy to AWS
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: |
+          aws eks --region ${AWS_REGION} update-kubeconfig --name ${EKS_CLUSTER_NAME}
+          kubectl apply -f kubernetes/
+
   test:
     runs-on: ubuntu-latest
     needs: build
